# Car-rental-web-app

./: README.md  asset-manifest.json  index.html
januszex-backend/: Cargo.toml
januszex-backend/migrations/2023-02-10-142511_januszex/: down.sql  up.sql
januszex-backend/src/: lib.rs  models.rs  reserve.rs  users.rs
januszex-backend/static/: asset-manifest.json  index.html
januszex-backend/static/static/css/: main.7712bca6.css.map
januszex-backend/static/static/js/: 787.37daf0ef.chunk.js  787.37daf0ef.chunk.js.map  main.c8147329.js  main.c8147329.js.map
januszex-frontend/: README.md  package-lock.json  package.json
januszex-frontend-gitPage/: package-lock.json  package.json
januszex-frontend-gitPage/public/: index.html
januszex-frontend-gitPage/src/: App.js  index.js
januszex-frontend-gitPage/src/components/: AccountNav.js  AccountNav.module.css  CarCard.js  CarCardReserv.js  CarCardReserv.module.css  LoginForm.js  MyRoutes.js  Navbar.js  PaymentForm.js  PersInfoForm.module.css  PersInfoPanel.js  SignUpForm.js  cars.js  colors.module.css
januszex-frontend-gitPage/src/pages/: AboutUsPage.module.css  AccountPage.js  AccountRoot.js  ChangePersInfoPage.js  ChangePersInfoPage.module.css  DamagesPage.js  DamagesPage.module.css  HomePage.js  (+9 more)
januszex-frontend/src/: App.css  App.js  index.css
static/css/: main.7712bca6.css  main.7712bca6.css.map
static/js/: main.4f6014c0.js  main.4f6014c0.js.map  main.6ed9010e.js  main.6ed9010e.js.map  main.810e55eb.js  main.810e55eb.js.map  main.aed99c83.js  main.aed99c83.js.map  main.c2a1820c.js  main.c2a1820c.js.map
(+50 files in other folders)
