[package]
name = "januszex-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
diesel = { version = "2.0.0-rc.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.4.1"
